--- a/style2.css
+++ b/style2.css
@@ -12,6 +12,7 @@ Guardar una variable en css
     --neutral-600: #1d1e20;
     --primary-200: #cbc8ff;
     --primary-500: #673de5;
+    --primary-700: rgb(80,37,209)
 }
 
 .html-vert{
@@ -203,7 +204,7 @@ header{
 /* Home//Inicio */
 
 .Home-section{
-    height: 50%;
+    height: 780px;
     padding: 36px 0 96px 0;
     background-color: #673de5;
     color: #ffffff;
@@ -216,7 +217,7 @@ header{
     flex-direction: row;
     justify-content: space-between;
     margin-inline: auto;
-    width: 1640px;
+    width: auto;
 }
 
 .Home-section-banner{
@@ -281,6 +282,9 @@ header{
 .imagen-heading{
     width: auto;
     height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
 }
 
 .imagen-heading img{
@@ -439,6 +443,12 @@ header{
     border: none;
 }
 
+@media screen and (min-width: 1440px) {
+    .Home-section-2{
+        width: 1440px;
+    }
+}
+
 @media screen and (max-width: 1205px) {
         .Home-section{
         height: 50%;
@@ -467,21 +477,69 @@ header{
         height: 100%;
         width: 100%;
     }
+
+    .section-main-icon i{
+    display: block;
+    font-size: 24px;
+    padding-right: 40px;
+    }
 }
+
+/* btn-fixed */
+
+.btn-fixed{
+    color: white;
+    background-color: #673de6;
+    border-radius: 50px;
+    padding: 10px;
+    position: fixed;
+    right: 16px;
+    bottom: 16px;
+    font-weight: 700;
+    width: auto;
+    height: 40px;
+    border-color: transparent;
+}
+
+.btn-fixed :hover{
+    color: white;
+    background-color: rgb(80,37,209);
+    transition: 0.3s;
+}
+
+.btn-fixed a{
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+/* footer */
+
+
+
+
 
 
 @media screen and (max-width: 1139px) {
+
+    .position-header{
+        height: 62px;
+    }
+
     .nav-section-main{
         display: none;
     }
+
     .header-content-wrapper{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
+
     .section-main-rigth{
         display: none;
     }
+
     .section-main-icon{
     height: auto;
     width: auto;
@@ -490,6 +548,7 @@ header{
     align-items: center;
     justify-content: right 0;
     }
+
     .section-main-icon i{
         font-size: 24px;
     }
@@ -523,9 +582,6 @@ header{
     }
 }
 
-@media screen and (max-width: 1025px) {
-    
-}
 
 @media screen and (max-width: 1024px) {
     .search-bar{
@@ -578,8 +634,8 @@ header{
         display: flex;
         flex-direction: column;
         justify-content: center;
-        height: 1220px;
-        width: 1024px;
+        height: auto;
+        width: auto;
         padding: 62px 0 80px;
     }
 
@@ -588,6 +644,7 @@ header{
         flex-direction: row;
         justify-content: center;
         margin: auto;
+        width: 100%;
     }
 
     .Home-section-banner{
@@ -603,6 +660,22 @@ header{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        width: auto;
+        height: auto;
+    }
+
+    .title-banner{
+        text-align: center;
+        text-justify: auto;
+        height: 120px;
+        width: 536px;
+        font-size: 60px;
+        line-height: 60px;
+        word-spacing: 5px;
+    }
+
+    .text-tipe-2{
+        margin-bottom: 24px;
     }
 
     .Home-section-banner{
@@ -613,8 +686,12 @@ header{
     }
 
     .imagen-heading{
-        height: 90%;
-        width: 80%;
+        height: 91%;
+        width: 91%;
+    }
+
+    .mails-section {
+        padding: 80px 0;
     }
 }
 
@@ -626,21 +703,22 @@ header{
     padding: 0;
 }
 
-@media screen and (max-width: 768px) {
-    .html-horz{
-        display: none;
-    }
+@media screen and (max-width: 767px) {
 
     .html-vert {
         display: inline-block;
         padding: 0 16px;
     }
 
+    .position-header{
+        height: 62px;
+    }
+
     .Home-section{
         display: flex;
         flex-direction: column;
         justify-content: end;
-        height: 1220px;
+        height: 100%;
         width: auto;
     }
 
@@ -655,6 +733,18 @@ header{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+
+    .title-banner{
+        width: 100%;
+        height: auto;
+        font-size: 40px;
+        letter-spacing: normal;
+        word-spacing: -2px;
+    }
+
+    .text-tipe-2{
+        text-align: center;
     }
 
     .Home-section-banner{
@@ -693,9 +783,25 @@ header{
         padding-left: 0 40px;
     }
 
-    .section-main-icon{
-        padding-right: 40px;
+    .feature-article{
+        width: 100%;
     }
+
+    .feature-article-content{
+        width: 100%;
+        padding: 28px 28px 32px;
+    }
+
+    .section-header{
+        width: auto;
+    }
+
+    .feature-article__image {
+        width: 100%;
+    }
+/*     .section-main-icon{
+        padding-right: 40px;
+    } */
 }
 
 @media screen and (max-width: 321) {
