--- a/style2.css
+++ b/style2.css
@@ -125,6 +125,7 @@ header{
     align-items: center;
     justify-content: right 0;
     width: 255.3px;
+    padding-right: 40px;
 }
 
 .section-main-lenguaje{
@@ -292,10 +293,6 @@ header{
     height: 90%;
 }
 
-/* .imagen-heading img{
-    width: 90%;
-    height: 90%;
-} */
 
 /* Emails con confianza */
 
@@ -385,7 +382,6 @@ header{
     font-size: 40px;
     font-weight: 400;
     line-height: 48px;
-    /* letter-spacing: -1px; */
 }
 
 .paragraph{
@@ -442,6 +438,142 @@ header{
     background-color: transparent;
     border: none;
 }
+
+/* Footer */
+
+.section-footer{
+    height: 713px;
+    padding-top: 56px;
+}
+
+.section-footer-inline {
+    height: 657px;
+    width: 1208px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    margin: auto;
+}
+
+.section-footer-logos{
+    height: 88px;
+    margin-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+}
+
+.section-H-social{
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 20px;
+}
+
+.logo-H-footer{
+    width: 187px;
+    height: 30px;
+}
+
+.section-social-logos{
+    height: 32px;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    gap: 20px;
+}
+
+.icon-social-logo{
+    width: 32px;
+    height: 32px;
+    display: flex;
+    gap: 20px;
+    border-radius: 5px;
+}
+
+.icon-social-logo i{
+    display: flex;
+    font-size: 32px;
+}
+
+/* .icon-social-logo i bi-linkedin {
+    width: 32px;
+    height: 32px;
+} */
+
+.section-legal-payment{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: end;
+    gap: 5px;
+}
+
+.section-legal-links{
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    gap: 20px;
+}
+
+.legal-box-links{
+    width: auto;
+    flex-direction: row;
+    align-items: end;
+    justify-content: space-between;
+}
+
+.legal-link{
+    height: 24px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 400;
+    color: #1d1e20;
+}
+
+.section-payment-methods{
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    gap: 5px;
+}
+
+.section-payment-methods img{
+    height: 40px;
+    width: 58px;
+}
+
+.footer-copyright{
+    height: 97px;
+    padding: 24px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-top: 1px solid #d5dfff;
+}
+
+.text-copyright{
+    height: 48px;
+    width: 70%;
+}
+
+.text-copyright-2{
+    width: 15%;
+    height: 48px;
+}
+
+.text-copyright-2 p{
+    height: 24px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 400;
+    color: #1d1e20;
+}
+
+
+
+/* Media (todas) */
 
 @media screen and (min-width: 1440px) {
     .Home-section-2{
